# solid_dmft

./: .buildinfo  .clang-tidy  .gitignore  CMakeLists.txt  ChangeLog.html  Dockerfile  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.md  cite_solid_dmft.bib  documentation.html  genindex.html  index.html  install.html  issues.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tutorials.html
doc/: CMakeLists.txt  CMakeLists.txt.orig  ChangeLog.md  about.rst  changelog.rst  conf.py  conf.py.in  documentation.rst  documentation.rst.orig  index.rst  install.rst  issues.rst  logo_solid_dmft.xcf  reference.rst  tutorials.rst
doc/_templates/: autosummary_class_template.rst  autosummary_module_template.rst  sideb.html
doc/cRPA_VASP/: README.md  ext_eps.sh
doc/cRPA_VASP/examples/: README.md
doc/debugging_examples/lno-csc-plo/: INCAR  KPOINTS  POSCAR  dmft_config.ini
doc/debugging_examples/lno-csc-w90/: INCAR_dft  dmft_config.ini  wannier90.inp
doc/debugging_examples/lno-one-shot/: dmft_config.ini
doc/debugging_examples/svo-csc-plo/: INCAR  dmft_config.ini  plo.cfg
doc/debugging_examples/svo-csc-w90/: INCAR_dft  README  dmft_config.ini  wannier90.inp
doc/debugging_examples/svo-one-shot/: dmft_config.ini
doc/examples/: README.md
doc/examples/lno-csc-plo/: INCAR  dmft_config.ini  rm_outputs.sh
doc/examples/lno-csc-w90/: INCAR  dmft_config.ini  ref.stderr.txt  ref.stdout.txt  ref.wannier90_band.kpt  rm_outputs.sh  wannier90.win
doc/examples/lno-one-shot/: dmft_config.ini
doc/examples/svo-csc-plo/: INCAR  dmft_config.ini  out.ref  out0.ref
doc/examples/svo-csc-w90/: INCAR  dmft_config.ini  ref.stderr.txt  ref.stdout.txt  ref.wannier90_band.kpt  wannier90.win
doc/examples/svo-one-shot/: dmft_config.ini
doc/input_output/DMFT_input/: advanced.rst  dft.rst  general.rst  generate_doc_from_comments.sh  input.rst  input_old.rst  matches.txt  matches_comments.txt  python_comments.txt  solver.rst
doc/input_output/DMFT_output/: .observables.rst.swp  iterations.rst  observables.rst  results.rst
doc/logos/: logo_no_text.xcf
doc/md_notes/: docker.md  run_cluster.md  run_locally.md  vasp_csc.md  w90_interface.md
doc/reference/: csc_flow.rst  dft_managers.rst  dmft_cycle.rst  dmft_tools.rst  postprocessing.rst  read_config.rst  util.rst
doc/reference/dft_managers/: qe_manager.rst  vasp_manager.rst
doc/reference/dmft_tools/: afm_mapping.rst  convergence.rst  formatter.rst  gf_mixer.rst  initial_sigma.rst  interaction_ham.rst  legendre_filter.rst  manipulate_mu.rst  observables.rst  results_arch.rst  (+1 more)
python/app4triqs/: CMakeLists.txt
(+677 files in other folders)
